--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -44,7 +44,7 @@ if __name__ == "__main__":
 ```
 
 The `serve` method creates a deployment from your flow and immediately begins listening for scheduled runs to execute. 
-It also create a schedule so that the flow will run every minute of every day.
+This example also create a schedule so that the flow will run every minute of every day.
 
 For slightly more configuration you can create a deployment that uses a work pool.
 Reasons to create a work-pool based deployment include:
