--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -57,7 +57,7 @@ Work pools are popular with data platform teams because they allow you to manage
 
 ### Create a work pool-based deployment
 
-Prefect offers two primary options for creating deployments that use a work pool: a Python method and a YAML file.
+Prefect offers two options for creating work pool-based deployments: a Python script or a YAML file.
 
 ### Create a deployment with a Python `flow.deploy` method
 
