--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -61,7 +61,7 @@ Prefect offers two options for creating work pool-based deployments: a Python sc
 
 ### Create a deployment with a Python `flow.deploy` method
 
-To define a deployment through Python code, use the `flow.deploy` method.
+To define a deployment with a Python script, use the `flow.deploy` method.
 
 Here's an example of a deployment that uses a work pool and bakes the code into a Docker image.
 
