--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -165,7 +165,7 @@ within an individual subprocess.
 Because runs are submitted to subprocesses, any external infrastructure configuration
 must be set up beforehand and kept associated with this process.
 
-This approach has these benefits:
+Benefits to this approach include:
 
 - Users are in complete control of their infrastructure, and anywhere the "serve" Python process can
 run is a suitable deployment environment.
