--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -59,7 +59,7 @@ Work pools are popular with data platform teams because they allow you to manage
 
 Prefect offers two options for creating work pool-based deployments: a Python script or a YAML file.
 
-### Create a deployment with a Python `flow.deploy` method
+### Create a deployment with `deploy`
 
 To define a deployment with a Python script, use the `flow.deploy` method.
 
