--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -26,7 +26,7 @@ pause scheduled runs, customize parameters, and more
 
 ## Create a deployment 
 
-### Create a deployment in Python with a local `serve` method
+### Create a deployment with `serve`
 
 This is the simplest way to get started with deployments:
 
