--- a/docs/3.0/deploy/infrastructure-concepts/store-flow-code.mdx
+++ b/docs/3.0/deploy/infrastructure-concepts/store-flow-code.mdx
@@ -11,8 +11,7 @@ You have several flow code storage options for remote execution:
 - Docker image-based storage
 - Cloud-provider storage (AWS S3, Azure Blob Storage, GCP GCS)
 
-Each of these options is popular.
-Your choice will depend upon your team's needs and tools.
+Each of these options is popular - your choice will depend upon your team's needs and tools.
 
 Local storage is also an option for deployments that run locally.
 
