--- a/docs/integrations/prefect-github/index.mdx
+++ b/docs/integrations/prefect-github/index.mdx
@@ -66,13 +66,13 @@ from prefect_github import GitHubCredentials
 
 
 if __name__ == "__main__":
-    flow.from_source(
-        source=GitRepository(
+
+    source = GitRepository(
         url="https://github.com/org/private-repo.git",
         credentials=GitHubCredentials.load("my-github-credentials-block")
-    ),
-    entrypoint="my_file.py:my_flow",
-    ).deploy(
+    )
+
+    flow.from_source(source=source, entrypoint="my_file.py:my_flow").deploy(
         name="private-github-deploy",
         work_pool_name="my_pool",
     )
